--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ body {
   font-size: 1rem;
   background-color: rgb(28, 28, 53);
 }
+#small-banner img {
+  height: 70px!important;
+}
 /* Navigation */
 
 /* Landing Page */
